【2025.3.3】RAG功能接入：PDF图文混合分块策略开发与接入